# vzglyd

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SHADER_CONTRACT.md  SLIDE_FORMAT.md  TODO.txt  build.rs  install.sh  loading.vzglyd  package-lock.json  package.json  playwright.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  slide_request.yml
.github/workflows/: ci.yml  pages.yml  publish-vzglyd-sidecar.yml  publish-vzglyd-slide.yml  release.yml
bridges/: README.md
bridges/reminders/: reminders.service  reminders_bridge.py
ci/: build-starter-slides.sh  package-release.sh
deploy/: README.md  weston.ini
deploy/systemd/: VRX-64-slides.path  vzglyd-slides.path  vzglyd-slides.service  vzglyd.service  weston.service
docs/: architecture.md  authoring-guide.md  constraint-principle.md  shader-contract.md
docs/examples/minimal-slide/: Cargo.toml  build.sh  minimal_slide.json
docs/examples/minimal-slide/src/: lib.rs
docs/slide-authoring/: ABI_REFERENCE.md  BLENDER_SCENE_WORKFLOW.md  END_TO_END_TUTORIAL.md  MANIFEST_PACKAGE_GUIDE.md  README.md  SHADER_AUTHORING_GUIDE.md
epics/: OVERVIEW.md
epics/E10-slide-scaffolding-and-decoupling/: E10-T1-slide-template.md  E10-T2-decouple-example-slides.md  E10-T3-sidecar-template.md  E10-T4-ci-build-isolation.md  E10-T5-xtask-new-slide.md  EPIC.md
epics/E11-dashboard-slide-port/: E11-T1-sidecar-kit.md  E11-T2-tier0-static-slides.md  E11-T3-tier1-api-slides.md  E11-T4-tier2-calendar-servers.md  E11-T5-tier3-news.md  E11-T6-reminders-bridge.md  EPIC.md
epics/E12-oss-release-and-deployment/: E12-T1-abi-stability-policy.md  E12-T10-slide-registry.md  E12-T11-vzglyd-get-cli.md  E12-T14-rustdoc.md  EPIC.md  (+11 more)
loading-slide/: Cargo.toml
loading-slide/assets/: world.glb
registry/: CONTRIBUTING.md  README.md  index.json
release-content/: CONSTITUTION.md  CONSTRAINTS.md  COVENANT.md  PHILOSOPHY.md  PRESS.md  README.md  SLIDES.md  THE-CONSTRAINT-PRINCIPLE.md
scripts/: prepare-slide-repo.sh
slides/: air_quality.vzglyd  clock.vzglyd  playlist.json
src/: blit.wgsl  date_utils.rs  imported_scene_shader.wgsl  main.rs  playlist.rs  render_context.rs  scene_utils.rs  shader_validation.rs  slide_loader.rs  slide_manifest.rs  slide_renderer.rs  transition.rs  transition.wgsl  wasm_host.rs
tests/: preview.spec.js  webgpu-basic.spec.js
(+13 files in other folders)
